[Fixes #80747508] - adjust the rotation on caret so that it doesnt jump around - requires changing the rotation center point

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,6 +1,11 @@
 @import "compass/css3";
 
 $header-margin: 30px;
+
+/* left and right side margins to match general page margins */
+$header-margin-left: $page-margin-left;
+$header-margin-right: $page-margin-right;
+
 $expanded-search-width: 450px;
 $notification-token-width: $header-margin * 2;
 
@@ -120,12 +125,14 @@ $notification-token-width: $header-margin * 2;
 
                 &.active .caret::before {
                     @include rotateX(180deg);
+					@include transform-origin (50%, 42%);
+					
                 }
 
                 &.username {
                     &:hover { background-color: $brand-tint; }
                     padding: 0 12px;
-                    margin-right: $header-margin;
+                    margin-right: $header-margin-right;
                 }
 
                 &.messages {
@@ -223,7 +230,7 @@ $notification-token-width: $header-margin * 2;
 
         .menu.popup_drawer {
             $drawer-width: 165px + $header-height;
-            @include transition-duration(0.45s);
+            @include transition-duration(0.5s);
             @include transition-timing-function(cubic-bezier(0,0,0,1));
 
             &.hidden { left: -$drawer-width; display: block !important;}
@@ -243,15 +250,14 @@ $notification-token-width: $header-margin * 2;
                 text-align: center;
                 &.remainder { height: 100vh; }
             }
-            
         }
 
         .menu.popup_username {
             line-height: 24px;
             /* add 1 for 1px border around popup */
-            right: $header-margin - 1;
+            right: $header-margin-right - 1;
             width: $header-margin * 6;
-
+            
             li {
                 @include full-item-link(40px)
             }
